# CC-pr2

./: CMakeLists.txt  README.md
data/: MT1.txt  MT1_error1.txt  MT1_error2.txt  MT1_error3.txt  MT1_error4.txt  MT2.txt
include/: Parser.h  Tape.h  Transition.h  TuringMachine.h
src/: Parser.cpp  Tape.cpp  TuringMachine.cpp
src/code/: main.cpp
